Fixed back to top button placement on mobile

--- a/flex.css
+++ b/flex.css
@@ -42,10 +42,6 @@
 	.logo {
 		padding-left: 10px;
 	}
-
-	.hero-overlay {
-		top: 35%;
-	}
 	
 }
 
@@ -62,10 +58,6 @@
 
 	.desktop-menu {
 		flex-direction: row;
-	}
-
-	.hero-overlay {
-		top: 25%;
 	}
 
 }
